--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
   </head>
-  <body>
+  <body style="background-color: #242424; color: #ffffff">
 
   </body>
 </html>
