--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock Paper Scissors</title>
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
   </head>
-  <body style="background-color: #242424; color: #ffffff">
-
+  <body>
+    <h1 class="title">Piedra, Papel o Tijera</h1>
+    <div class="container">
+      <div class="boxes">
+      <figure id="rock" class="box box__rock">
+        <img src="./img/rock.png" alt="Rock">
+      </figure>
+      <figure id="paper" class="box box__paper">
+        <img src="./img/paper.png" alt="Paper">
+      </figure>
+      <figure id="scissor" class="box box__scissor">
+        <img src="./img/scissor.png" alt="Scissor">
+      </figure>
+      </div>
+    </div>
+    <h2 class="subtitle">Selecciona una opción</h2>
+  <script src="https://kit.fontawesome.com/adc34bb5c2.js" crossorigin="anonymous"></script>
   </body>
 </html>
