--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container">
       <div class="boxes">
       <figure id="rock" class="box box__rock">
-        <img src="./img/rock.png" alt="Rock">
+        <img src="./img/rock.png" alt="rock">
       </figure>
       <figure id="paper" class="box box__paper">
-        <img src="./img/paper.png" alt="Paper">
+        <img src="./img/paper.png" alt="paper">
       </figure>
       <figure id="scissor" class="box box__scissor">
-        <img src="./img/scissor.png" alt="Scissor">
+        <img src="./img/scissor.png" alt="scissor">
       </figure>
       </div>
     </div>
