Finished logic of game and ui works

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="main.js" defer></script>
   </head>
   <body>
-    <h1 class="title">Piedra, Papel o Tijera</h1>
+    <h1 class="title">Rock, Paper or Scissor</h1>
     <div class="container">
       <div class="boxes">
       <figure id="rock" class="box box__rock">
@@ -23,7 +23,8 @@
       </figure>
       </div>
     </div>
-    <h2 class="subtitle">Selecciona una opción</h2>
+    <h2 class="subtitle">Select an option</h2>
+    <h2 class="result"></h2>
   <script src="https://kit.fontawesome.com/adc34bb5c2.js" crossorigin="anonymous"></script>
   </body>
 </html>
